WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310372
WebCore should not post a microtask while in GC
https://bugs.webkit.org/show_bug.cgi?id=310372
Summary
WebCore should not post a microtask while in GC
Yusuke Suzuki
Reported
2026-03-20 10:32:13 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2026-03-20 10:32:15 PDT
<
rdar://problem/172656576
>
Yusuke Suzuki
Comment 2
2026-03-20 10:33:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61020
EWS
Comment 3
2026-03-20 14:48:41 PDT
Committed
309637@main
(2e6b74ec3759): <
https://commits.webkit.org/309637@main
> Reviewed commits have been landed. Closing PR #61020 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug