WebCore should not post a microtask while in GC https://bugs.webkit.org/show_bug.cgi?id=310372 rdar://172656576

Reviewed by Keith Miller and Ryosuke Niwa.

Queuing microtask from the GC destructor is not allowed as microtask is
JS concept which strongly assumes that it is posted from the normal
execution (not in GC). This patch adds a workaround to
EventLoopTaskGroup::queueMicrotask and switching to macrotask when we
are in GC.

* Source/WebCore/dom/EventLoop.cpp:
(WebCore::EventLoopTaskGroup::queueMicrotask):

Canonical link: https://commits.webkit.org/309637@main